REGRESSION(r106232): The resize handler is always called after loading. https://bugs.webkit.org/show_bug.cgi?id=80242

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-03-15
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Ensure resize-events are not emitted when layout-size changes due to added
scrollbars. For fixed layout, scrollbars are never subtracted or added, so
we can compare fixedLayoutSize directly. For normal layout, use the full
visible rect size which is the same as layout size plus scrollbars.

Test: fast/events/resize-events.html

* page/FrameView.cpp:
(WebCore::FrameView::reset):
(WebCore::FrameView::layout):
(WebCore::FrameView::performPostLayoutTasks):
* page/FrameView.h:
(FrameView):

LayoutTests:

Tests that no resize events are emitted during page creation,
even if the page overflows and adds a scrollbar.

* fast/events/resize-events-expected.txt: Added.
* fast/events/resize-events.html: Added.

Canonical link: https://commits.webkit.org/98499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110938 268f45cc-cd09-0410-ab3c-d52691b4dbfc